python/versioned_docs/version-1.18/api/class-tracing.mdx
---
id: class-tracing
title: "Tracing"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

API for collecting and saving Playwright traces. Playwright traces can be opened in [Trace Viewer](./trace-viewer.mdx) after Playwright script runs.

Start recording a trace before performing actions. At the end, stop tracing and save it to a file.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser = chromium.launch()
context = browser.new_context()
context.tracing.start(screenshots=True, snapshots=True)
page = context.new_page()
page.goto("https://playwright.dev")
context.tracing.stop(path = "trace.zip")
```

</TabItem>
<TabItem value="async">

```py
browser = await chromium.launch()
context = await browser.new_context()
await context.tracing.start(screenshots=True, snapshots=True)
page = await context.new_page()
await page.goto("https://playwright.dev")
await context.tracing.stop(path = "trace.zip")
```

</TabItem>
</Tabs>


- [tracing.start(**kwargs)](./api/class-tracing.mdx#tracing-start)
- [tracing.start_chunk(**kwargs)](./api/class-tracing.mdx#tracing-start-chunk)
- [tracing.stop(**kwargs)](./api/class-tracing.mdx#tracing-stop)
- [tracing.stop_chunk(**kwargs)](./api/class-tracing.mdx#tracing-stop-chunk)

## tracing.start(**kwargs) {#tracing-start}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-name"/> &#60;[str]&#62; If specified, the trace is going to be saved into the file with the given name inside the `traces_dir` folder specified in [browser_type.launch(**kwargs)](./api/class-browsertype.mdx#browser-type-launch).<a href="#tracing-start-option-name" class="list-anchor">#</a>
- `screenshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-screenshots"/> &#60;[bool]&#62; Whether to capture screenshots during tracing. Screenshots are used to build a timeline preview.<a href="#tracing-start-option-screenshots" class="list-anchor">#</a>
- `snapshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-snapshots"/> &#60;[bool]&#62; Whether to capture DOM snapshot on every action.<a href="#tracing-start-option-snapshots" class="list-anchor">#</a>
- `sources`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-sources"/> &#60;[bool]&#62; Whether to include source files for trace actions.<a href="#tracing-start-option-sources" class="list-anchor">#</a>
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-title"/> &#60;[str]&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-return"/> &#60;[NoneType]&#62;<a href="#tracing-start-return" class="list-anchor">#</a>

Start tracing.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
context.tracing.start(name="trace", screenshots=True, snapshots=True)
page = context.new_page()
page.goto("https://playwright.dev")
context.tracing.stop(path = "trace.zip")
```

</TabItem>
<TabItem value="async">

```py
await context.tracing.start(name="trace", screenshots=True, snapshots=True)
page = await context.new_page()
await page.goto("https://playwright.dev")
await context.tracing.stop(path = "trace.zip")
```

</TabItem>
</Tabs>

## tracing.start_chunk(**kwargs) {#tracing-start-chunk}
- `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-option-title"/> &#60;[str]&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-chunk-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-return"/> &#60;[NoneType]&#62;<a href="#tracing-start-chunk-return" class="list-anchor">#</a>

Start a new trace chunk. If you'd like to record multiple traces on the same [BrowserContext], use [tracing.start(**kwargs)](./api/class-tracing.mdx#tracing-start) once, and then create multiple trace chunks with [tracing.start_chunk(**kwargs)](./api/class-tracing.mdx#tracing-start-chunk) and [tracing.stop_chunk(**kwargs)](./api/class-tracing.mdx#tracing-stop-chunk).

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
context.tracing.start(name="trace", screenshots=True, snapshots=True)
page = context.new_page()
page.goto("https://playwright.dev")

context.tracing.start_chunk()
page.click("text=Get Started")
# Everything between start_chunk and stop_chunk will be recorded in the trace.
context.tracing.stop_chunk(path = "trace1.zip")

context.tracing.start_chunk()
page.goto("http://example.com")
# Save a second trace file with different actions.
context.tracing.stop_chunk(path = "trace2.zip")
```

</TabItem>
<TabItem value="async">

```py
await context.tracing.start(name="trace", screenshots=True, snapshots=True)
page = await context.new_page()
await page.goto("https://playwright.dev")

await context.tracing.start_chunk()
await page.click("text=Get Started")
# Everything between start_chunk and stop_chunk will be recorded in the trace.
await context.tracing.stop_chunk(path = "trace1.zip")

await context.tracing.start_chunk()
await page.goto("http://example.com")
# Save a second trace file with different actions.
await context.tracing.stop_chunk(path = "trace2.zip")
```

</TabItem>
</Tabs>

## tracing.stop(**kwargs) {#tracing-stop}
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-option-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Export trace into the file with the given path.<a href="#tracing-stop-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-return"/> &#60;[NoneType]&#62;<a href="#tracing-stop-return" class="list-anchor">#</a>

Stop tracing.

## tracing.stop_chunk(**kwargs) {#tracing-stop-chunk}
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-option-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Export trace collected since the last [tracing.start_chunk(**kwargs)](./api/class-tracing.mdx#tracing-start-chunk) call into the file with the given path.<a href="#tracing-stop-chunk-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-return"/> &#60;[NoneType]&#62;<a href="#tracing-stop-chunk-return" class="list-anchor">#</a>

Stop the trace chunk. See [tracing.start_chunk(**kwargs)](./api/class-tracing.mdx#tracing-start-chunk) for more details about multiple trace chunks.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
